# Simopticon

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  omnetpp_example.ini
.github/workflows/: cmake.yml  docs.yml  documentation.yml
config/: simopticon.json
config/evaluations/: constant_headway.json
config/optimizers/: direct.json  montecarlo.json  randomneighbors.json
config/pipelines/: constant_headway.json
config/runners/: plexe.json
doc/: Doxyfile
docs/: Doxyfile
docs/html/: Abortable_8cpp.html  Abortable_8cpp.xhtml  Abortable_8cpp__incl.map  Abortable_8cpp__incl.md5  Abortable_8cpp_source.html  Abortable_8cpp_source.xhtml  Abortable_8h.html  Abortable_8h.xhtml  Abortable_8h__dep__incl.map  Abortable_8h__dep__incl.md5  Abortable_8h_source.html  Abortable_8h_source.xhtml  BaseRect_8cpp.html  BaseRect_8cpp.xhtml  BaseRect_8cpp__incl.map  BaseRect_8cpp__incl.md5  BaseRect_8cpp_source.html  BaseRect_8cpp_source.xhtml  BaseRect_8h.html  BaseRect_8h.xhtml  BaseRect_8h__dep__incl.map  BaseRect_8h__dep__incl.md5  BaseRect_8h__incl.map  BaseRect_8h__incl.md5  BaseRect_8h_source.html  BaseRect_8h_source.xhtml  ChildRect_8cpp.html  ChildRect_8cpp.xhtml  ChildRect_8cpp__incl.map  ChildRect_8cpp__incl.md5  ChildRect_8cpp_source.html  ChildRect_8cpp_source.xhtml  ChildRect_8h.html  ChildRect_8h.xhtml  ChildRect_8h__dep__incl.map  ChildRect_8h__dep__incl.md5  ChildRect_8h__incl.map  ChildRect_8h__incl.md5  ChildRect_8h_source.html  ChildRect_8h_source.xhtml  (+1128 more)
docs/latex/: ComparisonFunctions_8h.tex  ComparisonFunctions_8h__dep__incl.md5  ComparisonFunctions_8h__incl.md5  DirectComparisonFunctions_8h.tex  DirectComparisonFunctions_8h__dep__incl.md5  DirectComparisonFunctions_8h__incl.md5  DirectTypes_8h.tex  DirectTypes_8h__dep__incl.md5  Types_8h.tex  Types_8h__dep__incl.md5  Types_8h__incl.md5  annotated.tex  bug.tex  classAbortable.tex  classAbortable__inherit__graph.md5  (+77 more)
src/: ComparisonFunctions.h  Controller.cpp  Controller.h  OmnetParameter.cpp  OmnetParameter.h  Parameter.cpp  Parameter.h  Types.h  main.cpp
(+243 files in other folders)
